fix some HTML bugs, make styling bit nicer on mobile, though doesn't work there

--- a/app/assets/stylesheets/14-draw/draw.scss
+++ b/app/assets/stylesheets/14-draw/draw.scss
@@ -23,6 +23,9 @@ canvas.draw {
 .draw__under-canvas-area{
   display: flex;
   flex-direction: row;
+  @media screen and (max-width: 800px) {
+    flex-direction: column;
+  }
 }
 
 .draw__description {
